            of unix_compat.h, which allows us to choose the correct
            compatibility header at compile time (win32_compat.h,
            unix_compat.h, or doscmpat.h). All the platform-specific includes
            (io.h, and such) have been moved into their respective compat
            header, which cleaned up a lot of mess. Just to keep it real with
            Cygwin, the Makefile now autodetects Cygwin, and sets the build
            properties accordingly. Using a non-Cygwin GCC on Linux doesn't
            set the Cygwin-related properties. SDL_INC_DIR and SDL_LIB_DIR can
            be set as environment variables, so you never need to touch the
            Makefile directly with Cygwin. "make clean" now cleans up various
            Watcom C output, and vi's annoying "~" backup files. Tons of
            patches and enhancements and little cleanups just to get this
            to build on Watcom. Thing builds now, but has lots of problems
            running, which will be resolved, hopefully, tonight. The Linux
            version still works fine, and presumably so will the Cygwin
            version. Overall, the quality of the port's codebase is improving
            through this effort. I wonder if the DOS version will build now...
02152001 - Did initial work to get a protected mode DOS binary running again.
            Hey, why not? Not complete (compiles clean, no link). Lots of
            cleanups, and again, this is improving the quality of the port's
            codebase. As usual, the Linux, and presumably Cygwin, versions
            still compile clean and run. Haven't tried Watcom/Win32 tonight.
            Renamed dos_driver.c to dos_drvr.c, so you can build the DOS bits
            on a regular FAT filesystem. Added a Makefile.dos for use with
            Watcom C's wmake (based on Ken's original). Lots of other files
            touched.

--ryan. (icculus@lokigames.com)

// end of CHANGELOG ...
